--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="text_small">12sp</dimen>
+    <dimen name="text_message">13sp</dimen>
     <dimen name="text_normal">14sp</dimen>
     <dimen name="text_mid">16sp</dimen>
     <dimen name="divider">1dp</dimen>
