--- a/app/src/main/res/values/theme_black.xml
+++ b/app/src/main/res/values/theme_black.xml
@@ -20,6 +20,9 @@
         <item name="dateTextSize">@dimen/text_small</item>
         <item name="threadsColor">?primaryTextColor</item>
         <item name="threadsTextSize">@dimen/text_normal</item>
+        <item name="buttonTextColor">?contextColor</item>
+        <item name="buttonTextSize">@dimen/text_small</item>
+        <item name="buttonBackground">@drawable/url_button_background_theme_black</item>
     </style>
 
 </resources>
