--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,9 @@
     <color name="gray">#202020</color>
     <color name="yellow_orange">#FFA710</color>
     <color name="yellow_orange_50p">#80FFA710</color>
+
+    <color name="item_state_own">#00FFFF</color>
+    <color name="item_state_has_msg">#FF0000</color>
+    <color name="item_state_updated">#FFFF00</color>
+    <color name="item_state_new">#7000FF00</color>
 </resources>
