--- a/app/src/main/res/values/theme_attributes.xml
+++ b/app/src/main/res/values/theme_attributes.xml
@@ -22,4 +22,5 @@
     <attr name="buttonTextColor" format="color" />
     <attr name="buttonTextSize" format="dimension" />
     <attr name="buttonBackground" format="reference" />
+    <attr name="itemStateWidth" format="dimension" />
 </resources>
