Fix weird issue with level vs ripple

--- a/app/src/main/res/drawable-v21/item_list_background_theme_black.xml
+++ b/app/src/main/res/drawable-v21/item_list_background_theme_black.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-        android:color="@color/yellow_orange">
-    <item>
-        <level-list>
-            <item android:maxLevel="0" android:minLevel="0">
+<level-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:maxLevel="0"
+        android:minLevel="0">
+        <ripple android:color="@color/yellow_orange">
+            <item>
                 <shape>
                     <solid android:color="?primaryBackgroundColor"/>
                 </shape>
             </item>
-            <item android:maxLevel="1" android:minLevel="1">
+        </ripple>
+    </item>
+    <item
+        android:maxLevel="1"
+        android:minLevel="1">
+        <ripple android:color="@color/yellow_orange">
+            <item>
                 <shape>
                     <solid android:color="?secondaryBackgroundColor"/>
                 </shape>
             </item>
-        </level-list>
+        </ripple>
     </item>
-</ripple>
+</level-list>
