--- a/app/src/main/res/layout/view_recycler_refreshable_thread.xml
+++ b/app/src/main/res/layout/view_recycler_refreshable_thread.xml
@@ -22,11 +22,9 @@
 
     </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>
 
-    <include
+    <com.scurab.android.zumpareader.widget.PostMessageView
         android:id="@+id/response_panel"
-        layout="@layout/view_response_panel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom" />
-
+        android:layout_gravity="bottom"/>
 </FrameLayout>
