--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -7,5 +7,7 @@
         <!--<item name="android:statusBarColor">@android:color/transparent</item>--> <!-- status bar issue -->
     </style>
 
-    <style name="AppTheme.Settings" parent="@style/Base.V21.Theme.AppCompat" />
+    <style name="AppTheme.Settings" parent="@style/Base.V21.Theme.AppCompat" >
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
 </resources>
