--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,6 +19,7 @@
     <dimen name="scrollBarSize">3dp</dimen>
     <dimen name="edit_text_background_radius">@dimen/gap_tiny</dimen>
     <dimen name="response_edit_text_min_height">48dp</dimen>
+    <dimen name="new_message_edit_text_min_height">144dp</dimen>
     <dimen name="url_button_radius_corners_theme_black">5dp</dimen>
     <dimen name="url_button_stroke_width_theme_black">1dp</dimen>
     <dimen name="item_left_bar_width">2dp</dimen>
