--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="white">#FFF</color>
     <color name="gray">#202020</color>
     <color name="yellow_orange">#FFA710</color>
+    <color name="yellow_orange_dark">#ac710d</color>
     <color name="yellow_orange_50p">#80FFA710</color>
 
     <color name="item_state_own">#00FFFF</color>
