--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">@color/yellow_orange</color>
 
 
@@ -12,7 +10,7 @@
     <color name="white">#FFF</color>
     <color name="gray">#202020</color>
     <color name="yellow_orange">#FFA710</color>
-    <color name="yellow_orange_dark">#ac710d</color>
+    <color name="blue_gray">#0d8aac</color>
     <color name="yellow_orange_50p">#80FFA710</color>
 
     <color name="item_state_own">#00FFFF</color>
