--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -17,5 +17,11 @@
             android:defaultValue="true"
             android:key="KEY_LOAD_IMAGES"
             android:title="@string/load_images"/>
+        <ListPreference
+            android:key="KEY_FILTER"
+            android:defaultValue="0"
+            android:title="@string/filter"
+            android:entryValues="@array/filter_values"
+            android:entries="@array/filter_labels" />
     </PreferenceCategory>
 </PreferenceScreen>
