--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -26,5 +26,9 @@
         <EditTextPreference
             android:key="KEY_NICK_NAME"
             android:title="@string/nick_name"/>
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="KEY_SHOW_LAST_AUTHOR"
+            android:title="@string/show_last_author"/>
     </PreferenceCategory>
 </PreferenceScreen>
