--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_send_white"
+        android:src="@drawable/ic_add_white"
         app:layout_behavior="com.scurab.android.zumpareader.ui.QuickHideBehavior"/>
 
 </android.support.design.widget.CoordinatorLayout>
