--- a/app/src/main/res/layout/fragment_post_image.xml
+++ b/app/src/main/res/layout/fragment_post_image.xml
@@ -12,5 +12,5 @@
         android:layout_height="wrap_content"
         android:padding="?listItemPadding"
         android:scaleType="centerInside"
-        android:src="@mipmap/ic_launcher"/>
+        tools:src="@mipmap/ic_launcher"/>
 </LinearLayout>
