--- a/app/src/main/res/values/theme_attributes.xml
+++ b/app/src/main/res/values/theme_attributes.xml
@@ -10,6 +10,7 @@
     <attr name="imageButtonBackground" format="reference" />
     <attr name="listItemPadding" format="dimension"/>
     <attr name="threadItemBackground" format="reference"/>
+    <attr name="tabButtonBackground" format="reference"/>
     <attr name="nickNameColor" format="color"/>
     <attr name="nickTextSize" format="dimension"/>
     <attr name="subjectColor" format="color"/>
