--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,4 +27,21 @@
         <item name="android:windowCloseOnTouchOutside">false</item>
     </style>
 
+    <style name="ImageTable">
+        <item name="android:padding">@dimen/gap_normal</item>
+        <item name="android:textColor">?contextColor</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="ImageTable.Header">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ImageTable.Text">
+        <item name="android:gravity">center</item>
+    </style>
+
 </resources>
