Add tabwidget into horizontal scrollview

--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -3,9 +3,9 @@
     android:id="@android:id/tabhost"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="?primaryBackgroundColor"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="?primaryBackgroundColor"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -15,13 +15,17 @@
         android:layout_gravity="center_horizontal"
         android:orientation="vertical">
 
-        <TabWidget
-            android:id="@android:id/tabs"
+        <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:measureWithLargestChild="false"
-            android:showDividers="middle"
-            />
+            android:layout_height="wrap_content">
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:measureWithLargestChild="false"
+                android:showDividers="middle"
+                />
+        </HorizontalScrollView>
 
         <FrameLayout
             android:id="@android:id/tabcontent"
