Update PostImage layout

--- a/app/src/main/res/layout/fragment_post_image.xml
+++ b/app/src/main/res/layout/fragment_post_image.xml
@@ -4,13 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:padding="?listItemPadding"
-        android:scaleType="centerInside"
         tools:src="@mipmap/ic_launcher"/>
+
+    <com.scurab.android.zumpareader.widget.PostImagePanelView
+        android:id="@+id/post_image_panel_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
