--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,7 +30,7 @@
     <style name="ImageTable">
         <item name="android:padding">@dimen/gap_normal</item>
         <item name="android:textColor">?contextColor</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">@dimen/text_mid</item>
         <item name="android:layout_weight">1</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
