--- a/app/src/main/res/values/theme_attributes.xml
+++ b/app/src/main/res/values/theme_attributes.xml
@@ -26,4 +26,5 @@
     <attr name="buttonTextSize" format="dimension" />
     <attr name="buttonBackground" format="reference" />
     <attr name="itemStateWidth" format="dimension" />
+    <attr name="messageTextColor" format="color" />
 </resources>
