--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
 
     <dimen name="header_button_top_gap">52dp</dimen><!-- asset dependent value -->
 
+    <dimen name="text_smaller">10.5sp</dimen>
     <dimen name="text_small">12sp</dimen>
     <dimen name="text_message">13sp</dimen>
     <dimen name="text_normal">14sp</dimen>
