--- a/app/src/main/res/values/theme_black.xml
+++ b/app/src/main/res/values/theme_black.xml
@@ -9,6 +9,7 @@
         <item name="secondaryBackgroundColor">@color/dark</item>
 
         <item name="tabButtonBackground">@drawable/selectable_button_background_theme_black</item>
+        <item name="surveyButtonBackground">@drawable/survey_button_background_theme_black</item>
         <item name="imageButtonBackground">@drawable/image_button_background_theme_black</item>
         <item name="listItemPadding">@dimen/gap_normal</item>
         <item name="threadItemBackground">@drawable/item_list_background_theme_black</item>
@@ -25,6 +26,7 @@
         <item name="threadsTextSize">@dimen/text_normal</item>
         <item name="buttonTextColor">?contextColor</item>
         <item name="buttonTextSize">@dimen/text_small</item>
+        <item name="surveyButtonTextSize">@dimen/text_smaller</item>
         <item name="buttonBackground">@drawable/url_button_background_theme_black</item>
         <item name="itemStateWidth">@dimen/item_left_bar_width</item>
         <item name="messageTextColor">@color/message_text_black</item>
