--- a/app/src/main/res/drawable/survey_button_background_theme_black.xml
+++ b/app/src/main/res/drawable/survey_button_background_theme_black.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/drawable_progress">
+    <item>
         <clip>
-            <shape android:shape="rectangle">
-                <corners android:radius="@dimen/url_button_radius_corners_theme_black"/>
-                <solid android:color="@color/yellow_orange_50p"/>
-            </shape>
+            <selector>
+                <item android:state_selected="true">
+                    <shape android:shape="rectangle">
+                        <corners android:radius="@dimen/url_button_radius_corners_theme_black"/>
+                        <solid android:color="@color/yellow_orange_50p"/>
+                    </shape>
+                </item>
+                <item>
+                    <shape android:shape="rectangle">
+                        <corners android:radius="@dimen/url_button_radius_corners_theme_black"/>
+                        <solid android:color="@color/yellow_orange_25p"/>
+                    </shape>
+                </item>
+            </selector>
         </clip>
     </item>
-    <item android:drawable="@drawable/url_button_background_theme_black" />
+    <item android:drawable="@drawable/url_button_background_theme_black"/>
 </layer-list>
