--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="yellow_orange">#FFA710</color>
     <color name="blue_gray">#0d8aac</color>
     <color name="yellow_orange_50p">#80FFA710</color>
+    <color name="yellow_orange_25p">#40FFA710</color>
     <color name="rating_good">#0a0</color>
     <color name="rating_bad">#d00</color>
 
