--- a/app/src/main/res/values/theme_attributes.xml
+++ b/app/src/main/res/values/theme_attributes.xml
@@ -2,6 +2,7 @@
 <resources>
     <attr name="contextColor" format="color" />
     <attr name="contextColor50p" format="color" />
+    <attr name="contextColor25p" format="color" />
     <attr name="contextColorText" format="color" />
     <attr name="primaryTextColor" format="color" />
     <attr name="primaryBackgroundColor" format="color" />
