--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
 
     <style name="AppTheme.Settings" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="AppTheme.Dialog" parent="Theme.AppCompat.Light.Dialog" >
+    <style name="AppTheme.Dialog" parent="Theme.AppCompat.Dialog" >
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
