--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -28,6 +28,10 @@
             android:title="@string/nick_name"/>
         <CheckBoxPreference
             android:defaultValue="false"
+            android:key="KEY_OFFLINE"
+            android:title="@string/offline"/>
+        <CheckBoxPreference
+            android:defaultValue="false"
             android:key="KEY_SHOW_LAST_AUTHOR"
             android:title="@string/show_last_author"/>
     </PreferenceCategory>
